--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'                 //-->LIBRERIA PARA OBTENER IMAGENES POR URL
+    compile 'org.projectlombok:lombok-maven:1.16.6.1'               //-->LIBRERIA PARA @GETTER @SETTER Y MAS
     compile 'org.projectlombok:lombok:1.16.6'
-    compile 'org.projectlombok:lombok-maven:1.16.6.1'
-    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'              //-->LIBRERIA PARA ANIMAR RECYCLERVIEWS
+    compile 'com.squareup.retrofit:retrofit:1.9.0'                  //-->LIBRERIA PARA HTTP SERVICE
+    compile 'com.github.orhanobut:logger:1.12'                      //-->LIBRERIA PARA LOG
 }
