--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
+
     defaultConfig {
         applicationId "com.example.pro.restaurante_demo"
         minSdkVersion 15
@@ -19,6 +23,8 @@ android {
     }
 }
 
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -28,9 +34,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'                 //-->LIBRERIA PARA OBTENER IMAGENES POR URL
-    compile 'org.projectlombok:lombok-maven:1.16.6.1'               //-->LIBRERIA PARA @GETTER @SETTER Y MAS
-    compile 'org.projectlombok:lombok:1.16.6'
+    compile 'org.projectlombok:lombok:1.16.6'                       //-->LIBRERIA PARA @GETTER @SETTER
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'              //-->LIBRERIA PARA ANIMAR RECYCLERVIEWS
     compile 'com.squareup.retrofit:retrofit:1.9.0'                  //-->LIBRERIA PARA HTTP SERVICE
-    compile 'com.github.orhanobut:logger:1.12'                      //-->LIBRERIA PARA LOG
+    compile 'com.jakewharton.timber:timber:2.7.1'                   //-->LIBRERIA PARA LOG
+    compile 'io.realm:realm-android:0.87.5'                         //-->LIBRERIA PARA BD NoSQL Realm
+
 }
